@@ -91,7 +91,7 @@
       <tr>
         <td class="label"><label for="co_url">Company URL:</label></td>
         <td class="field">
-          http://<input id="co_url" class="{required:true}" maxlength="40" name="co_url" style="width:163px" type="text" tabIndex="2" value="" />
+          <input id="co_url" class="{required:true, url:true}" maxlength="40" name="co_url" style="width:163px" type="text" tabIndex="2" value="http://" />
         </td>
       </tr>
       <tr>
